# mems_application_qt

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  picture.qrc  qcustomplot.h  simpleclient.pro
